Fixed sidebar overflow

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -3,6 +3,7 @@
     max-height: 100%;
     background: $lightGray;
     border-right: 1px solid $gray;
+    overflow: auto;
 
     padding: 14px 0;
 }
